@@ -233,6 +233,7 @@ game.menu.leave=Leave Game
 game.menu.manual=Manual
 game.menu.save=Save Game
 game.menu.send=Send
+game.menu.showdice=Show dice results
 game.menu.showtoasts=Show Toasts
 game.menu.title=Menu
 game.note.armiesleft={0} armies left
