@@ -26,6 +26,8 @@ CURRENT VERSION:
 	MapEditor: can select what Islands to delete.
 	Resign button added in menu of FlashGUI for online play
 
+	Android 62 can toggle showing dice results in game options
+		   isGame=true added to android manifest
 	Android 61 Bugs with Map updating fixed
 		   Sending a saved game added to save game dialog
 	Android 60 Cards dialog shows when the game has no cards to give
